--- a/MyJupyterNotebook.ipynb
+++ b/MyJupyterNotebook.ipynb
@@ -69,8 +69,18 @@
     "|--------| ------- |\n",
     "|ML/DL   | Python  |\n",
     "| Stats  | R       |\n",
-    "|multi-purpose| ~~Java~~ ~~C++~~ Python!:joy:|"
+    "|multi-purpose| ~~Java~~ ~~C++~~ Python! |\n",
+    "\n",
+    "not able to show emoji in table. Try! :smile: "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4018dd33-c8b9-4b1a-9a24-7afedbe5a18b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
