--- a/MyJupyterNotebook.ipynb
+++ b/MyJupyterNotebook.ipynb
@@ -71,7 +71,7 @@
     "| Stats  | R       |\n",
     "|multi-purpose| ~~Java~~ ~~C++~~ Python! |\n",
     "\n",
-    "not able to show emoji in table. Try! :smile: "
+    "not able to show emoji. Try! :smile: "
    ]
   },
   {
